# libfvad

./: CMakeLists.txt  README.md
cmake/: fvadConfig.cmake.in
src/: CMakeLists.txt
